--- a/index.html
+++ b/index.html
@@ -7,6 +7,60 @@
     <title>converter</title>
 </head>
 <body>
+    <header>
+      <section class="sec-header">
+        <img src="photo/Asset 1@3x 1.svg" alt="">
+        <nav>
+            <ul type="none">
+                <li>БАНК</li>
+                <li>БИЗНЕС</li>
+                <li>ИНВЕСТИЦИИ</li>
+                <li>СТРАХОВАНИЕ</li>
+                <li>МОБАЙЛ</li>
+                <li>ПУТЕШЕСТВИЯ</li>
+                <li>РАЗВЛЕЧЕНИЯ</li>
+            </ul>
+        </nav>
+        <div class="login"><p>ВОЙТИ</p></div>
+      </section>
+    </header>
+    <!------------------------------------------------------------------------------------------------------------>
+    <main>
+        <section class="sec-main">
+            <h1>Конвертер валют онлайн</h1>
+            <div class="idk">
+
+                <div class="inpt-area inpt-area1">
+                    <p>У меня есть</p>
+                    <div class="currency">
+                        <span>RUB</span>
+                        <span>USD</span>
+                        <span>EUR</span>
+                        <span>GBP</span>
+                    </div>
+                    <div class="inpt inpt1">
+                        <input type="text">
+                        <p class="one">s</p>
+                    </div>
+                </div>
+
+                <div class="inpt-area inpt-area2">
+                    <p>Хочу приобрести</p>
+                    <div class="currency">
+                        <span>RUB</span>
+                        <span>USD</span>
+                        <span>EUR</span>
+                        <span>GBP</span>
+                    </div>
+                    <div class="inpt inpt2">
+                        <input type="text">
+                        <p class="one">s</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
     <script src="script.js"></script> 
 </body>
 </html>
