--- a/index.html
+++ b/index.html
@@ -32,29 +32,29 @@
 
                 <div class="inpt-area inpt-area1">
                     <p>У меня есть</p>
-                    <div class="currency">
-                        <span>RUB</span>
+                    <div class="currency span-div1">
+                        <span class="purple">RUB</span>
                         <span>USD</span>
                         <span>EUR</span>
                         <span>GBP</span>
                     </div>
                     <div class="inpt inpt1">
                         <input type="text">
-                        <p class="one">s</p>
+                        <p class="one p1">s</p>
                     </div>
                 </div>
 
                 <div class="inpt-area inpt-area2">
                     <p>Хочу приобрести</p>
-                    <div class="currency">
+                    <div class="currency span-div2">
                         <span>RUB</span>
-                        <span>USD</span>
+                        <span class="purple">USD</span>
                         <span>EUR</span>
                         <span>GBP</span>
                     </div>
                     <div class="inpt inpt2">
                         <input type="text">
-                        <p class="one">s</p>
+                        <p class="one p2">s</p>
                     </div>
                 </div>
 
